--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Dastageer",
   "license": "ISC",
   "devDependencies": {
-    "nodeman": "^1.1.2"
+    "nodeman": "^1.1.2",
+    "prettier": "^3.1.1"
   }
 }
