--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodeman src/index.js"
+    "dev": "nodeman -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "chai",
@@ -17,5 +17,10 @@
   "devDependencies": {
     "nodeman": "^1.1.2",
     "prettier": "^3.1.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
   }
 }
