--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-MONGODB_URI=mongodb+srv://pinjaridastageer:dastu@786@cluster0.scukplh.mongodb.net
+MONGODB_URI=mongodb+srv://pinjaridastageer:message123@app.n3m4z.mongodb.net
